--- a/main.css
+++ b/main.css
@@ -1,8 +1,9 @@
 * {
     font-family: arial;
+    background-color: #FF1111;
 }
 
-.header {
+header {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -28,7 +29,7 @@
     font-size: 24px;
 }
 
-.main {
+.hero {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -38,12 +39,12 @@
     padding: 150px;
 }
 
-.main .larger-font {
+.hero .larger-font {
     font-size: 48px;
     font-weight: bold;
 }
 
-.main .smaller-font {
+.hero .smaller-font {
     font-size: 18px;
 }
 
@@ -75,20 +76,58 @@
     border-color: #3882F6;
 }
 
-.quote {
+blockquote {
     color: #1F2937;
     background-color: #E5E7EB;
     font-size: 36px;
     font-style: light italic;
+    padding: 100px;
+}
+
+.quote-larger-font {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    font-size: 48px;
+    font-style: italic;
+}
+
+.quote-smaller-font {
+    display: block;
+    text-align: right;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 .call-to-action {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background: #3882F6;
     color: #000000;
-    background-color: #FF00FF;
+    gap: 100px;
+    margin: 100px;
+    padding: 100px;
+    z-index: 1;
 }
 
-.footer {
+.call-to-action-larger-font {
+    text-align: left;
+    font-size: 48px;
+    font-weight: bold;
+    padding: 100px;
+}
+
+.call-to-action-smaller-font {
+    text-align: left;
+    font-size: 24px;
+    padding: 100px;
+}
+
+footer {
     color: #F9FAF8;
     background-color: #1F2937;
-    font-size: 24px;
+    font-size: 18px;
+    padding: 40px;
+    text-align: center;
 }
