--- a/main.css
+++ b/main.css
@@ -1,32 +1,43 @@
 * {
     font-family: arial;
-    background-color: #FF1111;
+    background-color: #F9FAF8;
+    margin: 0px;
 }
 
 header {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    color: #F9FAF8;
     background-color: #1F2937;
-    font-size: 24px;
+    padding-top: 10px;
 }
 
-.header-logo {
+header * {
+    color: #F9FAF8;
+    background-color: #1F2937
+}
+
+header > div {
+    font-size: 24px;
     font-weight: bold;
 }
 
-.header-links {
+header > nav {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     gap: 30px;
+    font-size: 18px;
 }
 
-.header.button {
-    color: #3882F6;
-    background-color: #1F2937;
-    font-size: 24px;
+header li {
+    list-style: none;
+    display: inline-block;
+    padding: 0 20px;
+}
+
+main {
+    background-color: #F9FAF8;
 }
 
 .hero {
@@ -39,17 +50,77 @@ header {
     padding: 150px;
 }
 
-.hero .larger-font {
+.hero * {
+    background-color: #1F2937;
+    margin: 5px;
+}
+
+.hero > div:nth-child(1) {
+    display: flex 0;
+    flex-direction: column;
+}
+
+.hero > div:nth-child(1) > p:nth-child(1) {
     font-size: 48px;
+    font-weight: bold;
+    color: #F9FAF8;
+}
+
+.hero > div:nth-child(1) > p:nth-child(2) {
+    font-size: 18px;
+    color: #F9FAF8;
+}
+
+.hero > div:nth-child(1) > button {
+    font-size: 18px;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    padding: 10px;
+    padding-left: 40px;
+    padding-right: 40px;
+    border-radius: 10px;
+    border: 0;
     font-weight: bold;
 }
 
-.hero .smaller-font {
-    font-size: 18px;
+.hero > div:nth-child(2) {
+    display: flex;
+    color: #F9FAF8;
+    background-color: #4D4F57;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.hero > div:nth-child(2) > img {
+    background-color: #4D4F57;
 }
 
 .content {
+    display: flex;
+    flex-direction: column;
     color: #1F2937;
+    background-color: #F9FAF8;
+}
+
+.content > div:nth-child(1) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 36px;
+    background-color: #F9FAF8;
+    color: #1F2937;
+    font-weight: bold;
+    padding: 30px;
+}
+
+.content > div:nth-child(2) {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+.content > div:nth-child(2) * {
     background-color: #F9FAF8;
 }
 
@@ -66,30 +137,39 @@ header {
     display: flex;
     justify-content: space-evenly;
     gap: 30px;
+    padding: 30px;
 }
 
-.content-images img {
-    width: 300px;
-    height: 300px;
-    border: 20px solid;
+.content img {
+    width: 100%;
+    border: 5px solid;
     border-radius: 20px;
     border-color: #3882F6;
 }
 
 blockquote {
+    display: flex;
+    flex-direction: column;
+    padding: 100px;
+    color: #1F2937;
+    background-color: #E5E7EB;
+}
+
+blockquote > div:nth-child(1) {
     color: #1F2937;
     background-color: #E5E7EB;
     font-size: 36px;
-    font-style: light italic;
-    padding: 100px;
+    font-style: italic;
+    padding-top: 50px;
 }
 
-.quote-larger-font {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    font-size: 48px;
-    font-style: italic;
+blockquote > div:nth-child(2) {
+    text-align: right;
+    color: #1F2937;
+    background-color: #E5E7EB;
+    font-size: 24px;
+    font-weight: bold;
+    padding: 20px;
 }
 
 .quote-smaller-font {
@@ -104,24 +184,41 @@ blockquote {
     flex-direction: row;
     justify-content: center;
     background: #3882F6;
-    color: #000000;
+    color: #F9FAF8;
     gap: 100px;
+    padding: 50px;
     margin: 100px;
-    padding: 100px;
+    border-radius: 10px;
     z-index: 1;
 }
 
-.call-to-action-larger-font {
-    text-align: left;
-    font-size: 48px;
-    font-weight: bold;
-    padding: 100px;
+.call-to-action * {
+    background: #3882F6;
+    color: #F9FAF8;
 }
 
-.call-to-action-smaller-font {
+.call-to-action > div > div:nth-child(1) {
     text-align: left;
     font-size: 24px;
-    padding: 100px;
+    font-weight: bold;
+}
+
+.call-to-action > div > div:nth-child(2) {
+    text-align: left;
+    font-size: 18px;
+}
+
+.call-to-action > div > button {
+    font-size: 18px;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    padding: 10px;
+    padding-left: 40px;
+    padding-right: 40px;
+    border-radius: 10px;
+    border: 0;
+    font-weight: bold;
+    border: 3px solid #F9FAF8;
 }
 
 footer {
